# Jolt

./: .gitignore  Cargo.toml  README.md  build.rs  config.json  config.json.example  default.nix  deny.toml  rustfmt.toml  sqlite:database.sqlite
jolt/: Cargo.toml  build.rs
jolt/migrations/: 20221025134159_add_moderation_table.down.sql
jolt/src/: colors.rs  commands.rs  database.rs  error.rs  hooks.rs  main.rs  messages.rs
jolt/src/commands/: configuration.rs  meta.rs  moderation.rs
jolt/src/commands/configuration/: error.rs  types.rs
jolt/src/commands/moderation/: error.rs  types.rs  utilities.rs
jolt_proc_macros/: Cargo.toml
jolt_proc_macros/src/: lib.rs
migrations/: 20221024211457_add_timed_moderations_table.down.sql  20221024211457_add_timed_moderations_table.up.sql  20221025134159_add_moderation_table.up.sql  20221027141908_add_guild_settings_table.down.sql  20221027141908_add_guild_settings_table.up.sql
src/: colors.rs  commands.rs  database.rs  groups.rs  hooks.rs  main.rs  messagehandler.rs
src/commands/: meta.rs  moderation.rs
