[package]
name = "jolt_proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
syn = { version = "1.0.103", features = ["extra-traits"] }
proc-macro2 = "1.0.47"
